# geosaccade

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml  mvp.yaml
docs/: architecture.md  geosaccade-mechanism-design.md
geosaccade/: __init__.py
geosaccade/losses/: __init__.py  multi_task.py
geosaccade/models/: __init__.py  geo_gru.py  geosaccade.py  glimpse.py  gnn_querier.py  saccadic_attention.py  vision.py
geosaccade/utils/: __init__.py  haversine.py  metrics.py
scripts/: train.py
